--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,13 @@
-{ 
+/* 主要作用是vscode导入使用别名时可以自动化提示文件路径 */
+{
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-        "@/*": ["./*"]
-    }
+      "@/*": ["./*"],
+    },
+    "target": "ES6",
+    "module": "commonjs",
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules","dist"]
 }
